--- a/app/containers/Projects/Projects.scss
+++ b/app/containers/Projects/Projects.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding-top: 30px;
   flex-grow:2;
   box-sizing: border-box;
@@ -16,8 +16,7 @@
     display: -webkit-flex;
     display: flex;
     -webkit-flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
-    width: 100%;
   }
 }
